--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
 		"react-lottie": "^1.2.4",
 		"react-router-dom": "^6.22.3",
 		"react-scroll-trigger": "^0.6.14",
-		"react-transition-group": "^4.4.5"
+		"react-transition-group": "^4.4.5",
+		"node-sass": "^9.0.0",
+		"sass": "^1.74.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.64",
