--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 		"react-router-dom": "^6.22.3",
 		"react-scroll-trigger": "^0.6.14",
 		"react-transition-group": "^4.4.5",
-		"sass": "^1.74.1"
+		"node-sass": "^9.0.0",
+		"sass": "^1.74.1",
+		"vite": "^5.1.6"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.64",
