--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@fortawesome/fontawesome-free": "^6.5.1",
-		"framer-motion": "^11.0.14",
+		"@fortawesome/fontawesome-free": "^6.5.2",
+		"framer-motion": "^11.0.25",
+		"node-sass": "^9.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-intersection-observer": "^9.8.1",
@@ -19,9 +20,7 @@
 		"react-router-dom": "^6.22.3",
 		"react-scroll-trigger": "^0.6.14",
 		"react-transition-group": "^4.4.5",
-		"node-sass": "^9.0.0",
-		"sass": "^1.74.1",
-		"vite": "^5.1.6"
+		"sass": "^1.74.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.64",
@@ -33,6 +32,6 @@
 		"eslint-plugin-react-refresh": "^0.4.5",
 		"node-sass": "^9.0.0",
 		"sass": "^1.74.1",
-		"vite": "^5.1.6"
+		"vite": "^5.2.8"
 	}
 }
