--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-	"rewrites": [{ "source": "/projects", "destination": "/projects" }]
+	"rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
