--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"react-dom": "^18.2.0",
 		"react-intersection-observer": "^9.8.1",
 		"react-lottie": "^1.2.4",
+		"react-responsive": "^10.0.0",
 		"react-router-dom": "^6.22.3",
 		"react-scroll-trigger": "^0.6.14",
 		"react-transition-group": "^4.4.5",
